<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pb_loading"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_inicial"
        android:layout_width="176dp"
        android:layout_height="128dp"
        android:src="@drawable/money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_inicial"/>

    <TextView
        android:id="@+id/tv_infocad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bemvindo"
        android:text="@string/infocad"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hinthome"
        app:startIconDrawable="@drawable/person_icon"
        app:startIconContentDescription="pessoa"
        app:endIconDrawable="@drawable/clear_icon"
        app:endIconContentDescription="limpar"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_infocad"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_enviar_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tf_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txtbtnLogin"
        style="?attr/materialButtonOutlinedStyle"
        />

</androidx.constraintlayout.widget.ConstraintLayout>