<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    tools:context=".presentation.EscolhaActivity">

    <ImageView
        android:id="@+id/iv_inicial"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:src="@drawable/money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/olaUsuario"
        tools:text="Olá Brian, o que gostaria de fazer?"
        app:layout_constraintTop_toBottomOf="@id/iv_inicial"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_minhas_financas"
        style="@style/buttonMainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnminhasfinancas"
        android:layout_marginRight="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintTop_toBottomOf="@id/tv_escolha"
        android:layout_marginTop="48dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_jogo"
        style="@style/buttonMainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtbtnjogo"
        android:layout_marginRight="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintTop_toBottomOf="@id/bt_minhas_financas"
        android:layout_marginTop="48dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_educacao"
        style="@style/buttonMainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtbtneducacaofinanceira"
        android:layout_marginRight="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintTop_toBottomOf="@id/bt_jogo"
        android:layout_marginTop="48dp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>