<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="48dp"
    android:padding="48dp"
    android:layout_height="match_parent"
    tools:context=".presentation.CadastroActivity">

    <ImageView
        android:id="@+id/iv_inicial"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:src="@drawable/money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ola_usuario"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="Olá, Brian"
        android:textSize="@dimen/olaUsuario"
        app:layout_constraintTop_toBottomOf="@id/iv_inicial"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_not_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoCad"
        android:textSize="@dimen/paragrafo"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_ola_usuario"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="inherit"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_idade"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hintcadidade"
        android:textColorHint="@color/tf_color"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconContentDescription="limpar"
        app:endIconDrawable="@drawable/clear_icon"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_not_cadastro"
        app:startIconContentDescription="pessoa"
        app:startIconDrawable="@drawable/calendar_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_salario"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Digite seu Salário"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        android:textColorHint="@color/tf_color"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:endIconContentDescription="limpar"
        app:endIconDrawable="@drawable/clear_icon"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_idade"
        app:startIconContentDescription="pessoa"
        app:startIconDrawable="@drawable/dollar_sign_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_finalizacad"
        style="@style/buttonMainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtbtncad"
        android:layout_marginRight="64dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_salario"
        app:layout_constraintVertical_bias="0.39"
        android:textAllCaps="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>